# pwa-starter

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
pwa_starter/: __init__.py  core.py
tests/: test_pwa_starter.py
